Implement database clearing script, seed data generation, and comprehensive API tests for user management, class and batch handling, and assignment submissions.

--- a/user-api/.env
+++ b/user-api/.env
@@ -1,4 +1,27 @@
-MONGODB_URI=mongodb+srv://user-admin:user-admin@customerservicechat.4uk1s.mongodb.net/?retryWrites=true&w=majority&appName=CustomerServiceChat
-JWT_SECRET=your_jwt_secret_key
-JWT_RESET_SECRET=your_reset_secret_key
+# Server Configuration
 PORT=5000
+NODE_ENV=development # Change to 'production' in production
+
+# MongoDB Configuration
+MONGODB_URI=mongodb+srv://user-admin:user-admin@customerservicechat.4uk1s.mongodb.net/?retryWrites=true&w=majority&appName=CustomerServiceChat
+
+# JWT Authentication
+JWT_SECRET=a7f3b09e1c5d28e64f9a2b7d0c58e3f1a6b9d2c4e7f0a3b5d8c1e6f9
+JWT_RESET_SECRET=f1e6d3c9b5a2f7e0d4c8b3a6e9f2d1c7b4a0e5f2d8c6b3a9
+JWT_EXPIRY=24h
+ENCRYPTION_KEY=b5a9c2e7f1d6b3a8c4e0f2d7a9b5c3e1f8d4a6b2c9e5f7d3a1b8
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:8080,https://yourproductiondomain.com
+
+# API Keys
+GEMINI_API_KEY=AIzaSyAydz2ujm-2rlytilLL6CAylPqujxWbOwU
+
+# Rate Limiting
+RATE_LIMITING_ENABLED=false
+RATE_LIMIT_WINDOW_MS=900000
+RATE_LIMIT_MAX_REQUESTS=100000
+REGISTER_LIMIT_WINDOW_MS=3600000
+REGISTER_LIMIT_MAX_REQUESTS=5000000
+
+# Security
+BCRYPT_SALT_ROUNDS=12
