--- a/package.json
+++ b/package.json
@@ -55,7 +55,9 @@
     "dotenv": "^16.5.0",
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
+    "express-rate-limit": "^7.5.0",
     "framer-motion": "^12.6.5",
+    "helmet": "^8.1.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.462.0",
