--- a/package.json
+++ b/package.json
@@ -56,7 +56,7 @@
     "embla-carousel-react": "^8.3.0",
     "express": "^5.1.0",
     "express-rate-limit": "^7.5.0",
-    "framer-motion": "^12.6.5",
+    "framer-motion": "^12.9.2",
     "helmet": "^8.1.0",
     "input-otp": "^1.2.4",
     "jsonwebtoken": "^9.0.2",
@@ -71,6 +71,7 @@
     "react-resizable-panels": "^2.1.3",
     "react-router-dom": "^6.26.2",
     "react-tsparticles": "^2.12.2",
+    "react-type-animation": "^3.2.0",
     "recharts": "^2.12.7",
     "sonner": "^1.5.0",
     "tailwind-merge": "^2.5.2",
